# LuxCore

./: .gitignore  CMakeLists.txt  ChangeLog.txt  GNUmakefile  PostBuildWheel.cmake  README.md  TODO.txt  conanfile.py  debug_wheels.sh  luxcore.json  make.bat  pyproject.toml
.github/workflows/: release.yml  sample-builder.yml  sample-releaser.yml  wheel-builder.yml  wheel-publisher.yml  wheel-releaser.yml  wheels.yml
build-helpers/: README.md  build-settings.json
build-helpers/cmake/: KernelPreprocess.cmake  doxylux.cmake
build-helpers/conan/: conanfile.py
build-helpers/make/: cmake.py  get_preset.py  make_deps.py
build-helpers/wheels/: recompose_wheel_windows.py  repair_wheel_windows.sh
cmake/: Dependencies.cmake  PlatformSpecific.cmake  cmake.py  get_preset.py  make_deps.py
cmake/SpecializedConfig/: Config_Linux-Wheel.cmake  Config_Windows-Wheel.cmake
doxygen/: all.template.in  luxcore.template.in  luxrays.template.in  main.md  slg.template.in
include/luxcore/: cfg.h.in  luxcorelogger.h
include/luxrays/: cfg.h.in  luxrays.h
include/luxrays/accelerators/: bvhaccel.h  embreeaccel.h
include/luxrays/core/: dataset.h  device.h  exttrianglemesh.h
include/luxrays/core/geometry/: matrix3x3.h
include/luxrays/devices/: nativeintersectiondevice.h
include/luxrays/utils/: atomic.h  config.h  cudacache.h  fileext.h  oclcache.h  serializationutils.h  thread.h  threadsafe.h
include/slg/: rendersession.h
include/slg/core/: statictable.h
include/slg/core/sphericalfunction/: photometricdataies.h
include/slg/engines/: cpurenderengine.h  pathtracer.h  renderengine.h  tilerepository.h
include/slg/engines/bakecpu/: bakecpu.h
include/slg/engines/bidircpu/: bidircpu.h
include/slg/engines/bidirvmcpu/: bidirvmcpu.h
include/slg/engines/lightcpu/: lightcpu.h
include/slg/engines/pathcpu/: pathcpu.h
include/slg/engines/pathocl/: pathocl.h
include/slg/engines/pathoclbase/: compiledscene.h  pathoclbase.h  pathoclbasenativethread.h  pathoclbaseoclthread.h
include/slg/engines/rtpathcpu/: rtpathcpu.h
include/slg/engines/rtpathocl/: rtpathocl.h
include/slg/engines/tilepathcpu/: tilepathcpu.h
include/slg/engines/tilepathocl/: tilepathocl.h
include/slg/film/: film.h
include/slg/film/denoiser/: filmdenoiser.h
include/slg/imagemap/: imagemap.h  imagemapcache.h
include/slg/imagemap/resizepolicies/: resizepolicies.h
include/slg/lights/: infinitelight.h  light.h  mappointlight.h  mapspherelight.h
include/slg/lights/visibility/: envlightvisibilitycache.h
include/slg/materials/: archglass.h  carpaint.h  cloth.h  disney.h  glass.h  glossy2.h  glossycoating.h  glossytranslucent.h  material.h  materialdefs.h  matte.h  mattetranslucent.h  metal2.h  mirror.h  mix.h  roughglass.h  roughmatte.h  roughmattetranslucent.h  twosided.h  velvet.h
include/slg/samplers/: rtpathcpusampler.h
include/slg/scene/: colorspaceconverters.h  extmeshcache.h  sceneobject.h  sceneobjectdefs.h
include/slg/textures/: band.h  bevel.h  bilerp.h  bombing.h  brick.h  brightcontrast.h  checkerboard.h  colordepth.h  densitygrid.h  distort.h  dots.h  fresnelapprox.h  hsv.h  imagemaptex.h  normalmap.h  texture.h  texture_imagemap_funcs.cl  texturedefs.h  triplanar.h  wireframe.h
include/slg/textures/fresnel/: fresnelcolor.h
include/slg/textures/math/: abs.h  add.h  clamp.h  divide.h  greaterthan.h  lessthan.h  mix.h  modulo.h  power.h  random.h  remap.h  rounding.h  scale.h  (+1 more)
include/slg/utils/: scenevisibility.h
include/slg/volumes/: clear.h  heterogenous.h  homogenous.h  volume.h
notes/: TODO.txt
python/: README.txt
samples/luxcoreconsole/: CMakeLists.txt  luxcoreconsole.cpp
samples/luxcoredemo/: luxcoredemo.cpp
samples/luxcorescenedemo/: luxcorescenedemo.cpp
samples/luxcoreui/: CMakeLists.txt  fileext.h  filmchannelswindow.cpp  filmchannelswindow.h  filmoutputswindow.cpp  filmoutputswindow.h  imagewindow.h  importancewindow.cpp  luxcoreapp.cpp  luxcoreui.cpp  renderenginewindow.cpp  statswindow.cpp  typetable.h  uikeys.cpp  uiloop.cpp  uimenu.cpp  uimouse.cpp
src/luxcore/: CMakeLists.txt  kernelcachefill.cpp  luxcore.cpp  luxcoreimpl.cpp  luxcoreinit.cpp
src/luxcore/luxparser/: luxlex.cpp  luxlex.l  luxparse.cpp  luxparse.y
src/luxrays/: CMakeLists.txt
src/luxrays/accelerators/: bvhaccel.cpp  embreeaccel.cpp  mbvhaccel.cpp  mbvhaccelhw.cpp
src/luxrays/core/: dataset.cpp  exttrianglemesh.cpp  exttrianglemeshbevel.cpp  exttrianglemeshfile.cpp  init.cpp  namedobjectvector.cpp
src/luxrays/devices/: cudadevice.cpp  ocldevice.cpp
src/luxrays/utils/: config.cpp  cuda.cpp  ocl.cpp  properties.cpp  safesave.cpp  serializationutils.cpp  thread.cpp
src/pyluxcore/: CMakeLists.txt  pyluxcore.cpp  pyluxcoreforblender.cpp
src/slg/: CMakeLists.txt  renderconfig.cpp  rendersession.cpp
src/slg/engines/: cpurenderengine.cpp  pathtracer.cpp  renderengine.cpp  tilerepository.cpp  tilerepositoryserialize.cpp
src/slg/film/: film.cpp  filmaddsample.cpp  filmchannels.cpp  filmimagepipeline.cpp  filmoutput.cpp  filmparse.cpp  filmserialize.cpp
src/slg/imagemap/: imagemap.cpp  imagemapcache.cpp  imagemapinstrum.cpp
src/slg/lights/: lightsourcedefs.cpp
src/slg/materials/: archglass.cpp  carpaint.cpp  cloth.cpp  disney.cpp  glass.cpp  glossy2.cpp  glossycoating.cpp  glossytranslucent.cpp  material.cpp  materialdefs.cpp  matte.cpp  mattetranslucent.cpp  metal2.cpp  mirror.cpp  mixmat.cpp  roughglass.cpp  roughmatte.cpp  roughmattetranslucent.cpp  twosided.cpp  velvet.cpp
src/slg/samplers/: rtpathcpusampler.cpp
src/slg/scene/: extmeshcache.cpp  parselights.cpp  parsematerials.cpp  parseobjects.cpp  parseshapes.cpp  parsetextures.cpp  parsevolumes.cpp  scene.cpp  sceneobject.cpp  sceneobjectdefs.cpp  sceneserialize.cpp
src/slg/shapes/: pointiness.cpp  strands.cpp  subdiv.cpp
src/slg/textures/: bilerp.cpp  bombing.cpp  imagemaptex.cpp  texture.cpp  texturedefs.cpp
src/slg/utils/: filenameresolver.cpp  film2sceneradius.cpp  scenevisibility.cpp
src/slg/volumes/: clear.cpp  heterogenous.cpp  homogenous.cpp  volume.cpp
utils/: debug_samples.sh  debug_wheels.sh
(+57 files in other folders)
